# TabbedUI

./: CMakeLists.txt  NewTab.pro  README.txt  main.cpp  tabmainwindow.cpp  tabmainwindow.h  tabpreviewpopup.cpp  tabpreviewpopup.h  tabwidget.cpp  tabwidget.h
